unpackaged/main/default/objects/Assistants__c/Assistants__c.object-meta.xml
<CustomObject>
    <label>Assistants</label>
    <nameField>
        <displayFormat>A - {000000}</displayFormat>
        <label>Assistants Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assistants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>