unpackaged/main/default/objects/Assistants__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assistants</relationshipLabel>
    <relationshipName>Assistants</relationshipName>
    <type>Lookup</type>
</CustomField>