unpackaged/main/default/objects/Assistants__c/fields/Assistant__c.field-meta.xml
<CustomField>
    <fullName>Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assistants (Assistant Name)</relationshipLabel>
    <relationshipName>Assistants1</relationshipName>
    <type>Lookup</type>
</CustomField>