unpackaged/main/default/objects/Assistants__c/fields/CC_ed_on_all_Communication__c.field-meta.xml
<CustomField>
    <fullName>CC_ed_on_all_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CC-ed on all Communication?</label>
    <type>Checkbox</type>
</CustomField>