unpackaged/main/default/objects/Assistants__c/fields/Phone_Email__c.field-meta.xml
<CustomField>
    <fullName>Phone_Email__c</fullName>
    <formula>Assistant__r.Phones__c &amp; " / " &amp; Assistant__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone/Email</label>
    <type>Text</type>
</CustomField>